# weaver

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  loom.toml.example  primer.md  pyproject.toml
crates/loom/: CONCIERGE.md  Cargo.toml  build.rs
crates/loom/frontend/: package-lock.json  package.json  rspack.config.js  tsconfig.json
crates/loom/frontend/scripts/: gen-icons.py
crates/loom/frontend/src/: App.vue  api.ts  auth.ts  discussion-anchor.ts  env.d.ts  index.html  main.ts  markdown-render.ts  markdown.css  markdown.ts  monaco.ts  styles.css  types.ts
crates/loom/frontend/src/components/: AccountPanel.vue  AcpConversation.vue  AgentProfileEditor.vue  AgentRuntimePicker.vue  AgentTerminal.vue  AgentUsage.vue  AppRail.vue  AppearancePanel.vue  ArtifactComments.vue  ArtifactDocument.vue  ArtifactsPanel.vue  AttentionBadge.vue  AutomationRunRow.vue  AutomationSessionRow.vue  AutomationSessions.vue  CodeBlock.vue  CommentRail.vue  CommentThread.vue  CustomAgentsPanel.vue  EnvPanel.vue  GithubAssociations.vue  GithubStatus.vue  HtmlArtifactView.vue  IdeFrame.vue  IdleChip.vue  LogsPanel.vue  MarkdownView.vue  McpPanel.vue  MermaidBlock.vue  NewSessionDrawer.vue  OutcomeBadge.vue  ProfilesPanel.vue  ScratchPanel.vue  ScratchPicker.vue  SessionActivity.vue  SessionConversation.vue  SessionDetailsPopover.vue  SessionIssues.vue  SessionOverview.vue  SessionPageHeader.vue  (+16 more)
crates/loom/frontend/src/lib/: automationSessions.ts  followFoot.ts  markdownDoc.ts  overlooker.ts  sessionActions.ts  sessionState.ts  sessionsStore.ts  terminalConfig.ts  time.ts  watch.ts
crates/loom/frontend/src/views/: Artifacts.vue  Chat.vue  FileBrowser.vue  Issues.vue  Login.vue  OverlookerDetail.vue  Overlookers.vue  SessionDetail.vue  SessionList.vue  Settings.vue  Shell.vue  Watches.vue
crates/loom/migrations/: 0001_baseline.sql  0004_workload_federation.sql  0005_restricted_profiles.sql  0006_mcp_access.sql  0007_automation_channels.sql
crates/loom/overlookers/: archive_merged.py  pr_label.py  review_wait.py  status.py
crates/loom/profiles/: github_comment.json
crates/loom/src/: agent.rs  agent_env.rs  auth.rs  automation.rs  backend.rs  builtins.rs  chat.rs  chatlog.rs  client.rs  client_context.rs  custom_agents.rs  custom_mcp.rs  db.rs  endpoint.rs  envfile.rs  github.rs  github_app.rs  github_manifest.rs  github_trigger.rs  ide.rs  launch_gate.rs  lib.rs  logs.rs  loom_config.rs  monitor.rs  overlooker.rs  owners.rs  profile.rs  repo.rs  repo_env.rs  restricted_mcp.rs  runner.rs  runs.rs  runtime.rs  server.rs  session.rs  setup.rs  shell.rs  slack.rs  summary.rs  (+6 more)
crates/loom/src/acp/: mod.rs  wire.rs
crates/loom/src/mcp/: github.rs  messaging.rs  mod.rs
crates/loom/src/web/: agents.rs  artifacts.rs  auth.rs  automation.rs  branches.rs  deployment.rs  diagnostics.rs  discussion.rs  env.rs  issues.rs  logview.rs  mcps.rs  mod.rs  overlookers.rs  profiles.rs  repo_env.rs  repos.rs  restricted_github.rs  scratch.rs  sessions.rs  settings.rs  watches.rs
crates/loom/tests/: docker_runner.rs  hook_monitor.rs  integration.rs  repo_setup.rs
crates/loom/tests/fixtures/: fake-acp-agent.mjs
crates/loom/tests/integration/: acp.rs  archive.rs  auth.rs  branches.rs  conversation.rs  custom_agents.rs  diagnostics.rs  env.rs  files.rs  fixtures.rs  ide.rs  logs.rs  main.rs  mcp_conformance.rs  overlookers.rs  pane.rs  profiles.rs  recover.rs  repos.rs  scratch.rs  sessions.rs  shell.rs  terminal.rs  typed_client.rs  watches.rs  webhook.rs
crates/loom/tests/integration/programs/: echo_env.py  survey.py  survey_triggered.py
crates/loom/watches/: archive_merged.py  pr_label.py  resume.py  review_wait.py  status.py
crates/tapestry/: Cargo.toml
crates/tapestry/src/: client.rs  lib.rs  paths.rs  protocol.rs  supervisor.rs
crates/tapestry/tests/: detached.rs  lifecycle.rs  relay.rs
crates/weaver/: Cargo.toml
crates/weaver-api/: Cargo.toml
crates/weaver-api/src/: capability.rs  client.rs  dto.rs  endpoint.rs  lib.rs
crates/weaver-core/: Cargo.toml  WEAVER.md  primer.md
crates/weaver-core/migrations/: 0001_baseline.sql  0002_drop_notes.sql  0003_triage.sql  0004_overlookers.sql  0005_tags.sql  0006_issue_tags.sql  0007_artifacts.sql  0008_drop_plan_task.sql  0009_overlooker_run_output.sql  0010_overlooker_state.sql  0011_discussion.sql  0012_goal_artifact.sql  0013_watches.sql
crates/weaver-core/src/: agent.rs  artifact.rs  branch.rs  config.rs  db.rs  discussion.rs  events.rs  git.rs  github.rs  issue.rs  lib.rs  migrations.rs  note.rs  overlooker.rs  plan.rs  repo_config.rs  tags.rs  watch.rs
crates/weaver-core/src/transcript/: claude.rs  codex.rs  iris.rs  mod.rs
crates/weaver-py/: Cargo.toml  README.md  pyproject.toml
crates/weaver-py/examples/: fleet_status.py
crates/weaver-py/python/: weaver_py.pyi
crates/weaver-py/src/: lib.rs
crates/weaver-py/tests/: test_capabilities.py  test_live_roundtrip.py
crates/weaver/tests/: agent_cli.rs
deploy/: README.md
docs/: ARCHITECTURE.md  artifacts.md  browser-terminal.md  embedded-ide.md  github-trigger.md  lint.md  loom-ui.md  overlooker.md  repo-scoped-issues.md  restricted-sessions.md  slack-trigger.md  structured-projects.md
e2e/: mock-agent.py  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/: package-lock.json  package.json
python/weaver-loom/: README.md  pyproject.toml
python/weaver-loom/src/weaver_loom/: __init__.py
python/weaver-loom/tests/: conftest.py  test_resume_program.py  test_review_wait_program.py  test_status_program.py  test_weaver_loom.py
scripts/: gh_app_deliveries.py  lint-review.py  loom_webhook_replay.py  pre-commit.sh  setup.sh
src/: agent.rs  client.rs  config.rs  db.rs  endpoint.rs  events.rs  executor.rs  git.rs  issue.rs  lib.rs  monitor.rs  notify.rs  repo.rs  runner.rs  sandbox.rs  server.rs  settings.rs  summary.rs  tmux.rs  web.rs  workspace.rs
templates/: design.md  implementation.md  index.md  issue-fix.md  python-cli.md  python-coding.md  research.md
tests/: executor_integration.rs  (+16 more)
(+122 files in other folders)
