[package]
name = "weaver"
version = "0.1.0"
edition = "2021"

[lib]
name = "weaver"
path = "src/lib.rs"

[[bin]]
name = "weaver"
path = "src/bin/weaver.rs"

[[bin]]
name = "mock_agent"
path = "src/bin/mock_agent.rs"
test = false
bench = false

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
axum = "0.8"
futures-core = "0.3"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }
rand = "0.9"
base64 = "0.22"
hex = "0.4"


[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
