[package]
name = "loom"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[lib]
name = "loom"
path = "src/lib.rs"

[[bin]]
name = "loom"
path = "src/bin/loom.rs"

[dependencies]
weaver-core = { path = "../weaver-core" }
weaver-api = { path = "../weaver-api" }
smartdoc = { path = "../smartdoc" }
tapestry = { path = "../tapestry" }
anyhow = "1"
# Password hashing for the user/password login path (the OWASP-recommended KDF).
argon2 = "0.5"
# Trait objects with async methods — the GitHub trigger's gateway abstraction
# (`GithubApi`), so the `gh`-backed implementation and a test fake share a type.
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
futures-util = "0.3"
# Hex-encode the SHA-256 digests we store for API tokens and session cookies.
hex = "0.4"
# Sign the GitHub App JWT (RS256) we exchange for short-lived installation
# tokens — the hardening that replaces the ambient GH_TOKEN (crate::github_app).
jsonwebtoken = "9"
# HMAC-SHA256 for verifying the GitHub webhook signature (`X-Hub-Signature-256`).
# `Mac::verify_slice` is a constant-time compare, so the verification can't be
# turned into a timing oracle.
hmac = "0.12"
# Reverse-proxying the embedded code-server (crate::ide): a pooled HTTP client
# (hyper-util legacy) for the asset/API plane, and hyper's low-level conn for the
# transparent WebSocket-upgrade passthrough (extension host + integrated terminal).
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
percent-encoding = "2"
rand = "0.9"
# `rustls-tls` is needed for the GitHub OAuth token/user calls over HTTPS — the
# rest of loom's HTTP is loopback to its own daemon, but the OAuth dance reaches
# github.com directly.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# SHA-256 for hashing API tokens / session ids at rest (high-entropy secrets, so
# a fast digest is right — the slow KDF above is only for low-entropy passwords).
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "derive"] }
# The overlooker engine materializes embedded builtin scripts to a scratch file
# before running them; the tests reuse it for fixtures.
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower-http = { version = "0.6", features = ["cors", "fs", "compression-full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
croner = "3"

[dev-dependencies]
# WebSocket client for the terminal round-trip integration test. 0.29 matches
# axum 0.8's own tokio-tungstenite, so the two speak the same protocol stack.
tokio-tungstenite = "0.29"
futures-util = "0.3"
# Raw-body HTTP client for the scratch-upload integration test.
reqwest = { version = "0.12", default-features = false, features = ["json"] }
# A stub upstream (HTTP + WS echo) for the embedded-editor reverse-proxy test —
# stands in for code-server so the proxy is exercised without it installed.
axum = { version = "0.8", features = ["ws"] }
# The integration tests share a `TestServer` harness that sets process-global
# env (WEAVER_HOME / WEAVER_API / WEAVER_TAPESTRY_BIN), so they must not run
# concurrently within the test binary; `#[serial]` serializes them.
serial_test = "3"
# The webhook suite forges a valid `X-Hub-Signature-256` (hmac/sha2/hex) and
# installs a fake `GithubApi` (async-trait, anyhow::Result) into the test server.
anyhow = "1"
async-trait = "0.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
