[package]
name = "tapestry"
version = "0.1.0"
edition = "2021"

[lib]
name = "tapestry"
path = "src/lib.rs"

[[bin]]
name = "tapestry"
path = "src/bin/tapestry.rs"

[dependencies]
weaver-core = { path = "../weaver-core" }
anyhow = "1"
libc = "0.2"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
vt100 = "0.16"

[dev-dependencies]
libc = "0.2"
tempfile = "3"
# The lifecycle tests set the process-global WEAVER_HOME, so they must not run
# concurrently within the test binary.
serial_test = "3"
