[package]
name = "weaver-api"
version = "0.2.0"
edition = "2021"

[lib]
name = "weaver_api"
path = "src/lib.rs"

[dependencies]
weaver-core = { path = "../weaver-core" }
anyhow = "1"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
