[package]
name = "weaver-core"
version = "0.2.0"
edition = "2021"

[lib]
name = "weaver_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "derive"] }
tokio = { version = "1", features = ["rt", "macros", "fs", "process", "sync"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "fs", "process", "sync", "rt-multi-thread"] }
