[package]
name = "weaver"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "weaver"
path = "src/bin/weaver.rs"

[dependencies]
weaver-core = { path = "../weaver-core" }
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
tempfile = "3"
