[package]
name = "weaver"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "weaver"
path = "src/bin/weaver.rs"

[dependencies]
weaver-core = { path = "../weaver-core" }
weaver-api = { path = "../weaver-api" }
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[dev-dependencies]
loom = { path = "../loom" }
serial_test = "3"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
