[project]
name = "weaver-loom"
version = "0.2.0"
description = "Python layer over the loom REST API: fleet reads, capability-gated actions, and the watch round context."
readme = "README.md"
requires-python = ">=3.9"
# Stdlib-only on purpose: the loom engine vendors this module onto PYTHONPATH
# for every watch script it runs, so a script needs no install step.
dependencies = []

[build-system]
requires = ["uv_build>=0.6,<0.9"]
build-backend = "uv_build"

[dependency-groups]
# `uv run pytest` from this directory runs the server-free contract suite in
# tests/; CI runs the same suite in the python-binding job.
dev = ["pytest"]
